--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ body {
     border-radius: 50%;
     width: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 45px;
 }
 
 #right-column {
