--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,11 @@ body {
 }
 
 #right-column {
-    padding-top: 60px;
+    padding-top: 120px;
+}
+
+#left-column {
+    text-align: center;
 }
 
 .contact-section {
@@ -139,5 +143,41 @@ body {
 
 .mailto:hover {
     color: #252525;
+    transition: .5s;
+}
+
+.fas fa-envelope {
+    display: inline-block;
+}
+
+.email {
+    display: inline-block;
+    padding-left: 15px;
+}
+
+.facebook {
+    padding-left: 22px;
+    text-decoration: none;
+    color: #fc886f;
+}
+
+.facebook:hover {
+    color: #252525;
+    transition: .5s;
+}
+
+.goingup {
+    display: inline-block;
+    padding-left: 20px;
+    text-decoration: none;
+}
+
+.up {
+    text-decoration: none;
+    color: #252525;
+}
+
+.up:hover {
+    color: #fc886f;
     transition: .5s;
 }
