--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,10 @@ body {
     border-radius: 50%;
     width: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 32.5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 #right-column {
