--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@ body {
     
 }
 
+.learn {
+    font-size: 20px;
+}
+
 .banner-text h1 {
     color: #252525;
     font-size: 10vw;
@@ -116,6 +120,9 @@ body {
         font-size: 1.2em;
     }
 
+    .learn {
+        display: none;
+    }
 }
 
 .row {
