Added a github link to my contact page

--- a/css/main.css
+++ b/css/main.css
@@ -269,3 +269,22 @@ body {
     color: #252525;
     transition: .5s;
 }
+.fab fa-github {
+    display: inline-block;
+}
+
+.github {
+    text-decoration: none;
+    display: inline-block;
+    padding-left: 15px;
+}
+
+.github-account {
+    text-decoration: none;
+    color: #fc886f;
+}
+
+.github-account:hover {
+    color: #252525;
+    transition: .5s;
+}
